update the index.html page

--- a/index.html
+++ b/index.html
@@ -1,13 +1,77 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- ===== BASIC META ===== -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DevRo AI</title>
+
+    <!-- ===== TITLE ===== -->
+    <title>DevRo AI – Build Websites & Apps with AI</title>
+
+    <!-- ===== SEO ===== -->
+    <meta
+      name="description"
+      content="DevRo AI lets you build full websites and React apps using AI. Generate production-ready HTML or React code with previews and downloads."
+    />
+    <meta
+      name="keywords"
+      content="DevRo AI, AI website builder, AI code generator, React AI, HTML generator, SaaS builder, Lovable alternative"
+    />
+    <meta name="author" content="DevRo AI" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- ===== CANONICAL ===== -->
+    <link rel="canonical" href="https://devro.ai/" />
+
+    <!-- ===== FAVICON ===== -->
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/src/assets/devro-logo.svg"
+    />
+
+    <!-- ===== THEME ===== -->
+    <meta name="theme-color" content="#0a0a0a" />
+
+    <!-- ===== OPEN GRAPH (SOCIAL SHARE) ===== -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="DevRo AI – Build with AI" />
+    <meta
+      property="og:description"
+      content="Generate complete websites and React apps using AI. Preview HTML, download full projects, and ship faster with DevRo AI."
+    />
+    <meta property="og:url" content="https://devro.ai/" />
+    <meta
+      property="og:image"
+      content="https://devro.ai/og-image.png"
+    />
+
+    <!-- ===== TWITTER ===== -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DevRo AI – Build with AI" />
+    <meta
+      name="twitter:description"
+      content="Generate websites and React apps using AI. Preview, edit, and download production-ready code."
+    />
+    <meta
+      name="twitter:image"
+      content="https://devro.ai/og-image.png"
+    />
+
+    <!-- ===== PERFORMANCE ===== -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   </head>
+
   <body>
+    <noscript>
+      DevRo AI requires JavaScript to run. Please enable JavaScript in your browser.
+    </noscript>
+
     <div id="root"></div>
+
+    <!-- ===== VITE ENTRY ===== -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
