update the logo

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/src/assets/devro-logo.svg"
+      href="/src/assets/devro-logo-without-text.svg"
     />
 
     <!-- ===== THEME ===== -->
